CREATED: Added lesson 6

--- a/progress.html
+++ b/progress.html
@@ -261,6 +261,40 @@
                       </div>
                     </li>
                     <!-- lesson 5 end -->
+                    <!-- lesson 6 -->
+                    <li>
+                      <div class="list_inner">
+                        <div class="image">
+                          <img src="assets/img/bg.jpg" alt="thumb" />
+                          <div
+                            class="main"
+                            style="
+                              background-image: url(assets/img/Progress/lesson6.jpg);
+                            "
+                          ></div>
+                        </div>
+                        <div class="details">
+                          <div class="extra">
+                            <p class="date">
+                              By <a href="#">Frederick PIXEL</a
+                              ><span>15.07.2021</span>
+                            </p>
+                          </div>
+                          <h3 class="title">
+                            Lesson 6 <br />
+                            How to work with design layouts
+                          </h3>
+                          <div class="pixel_tm_read_more">
+                            <a
+                              href="https://frederickpixel.com/homework/Lesson-6/"
+                              target="_blank"
+                              ><span>Read More</span></a
+                            >
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                    <!-- lesson 6 end -->
                   </ul>
                 </div>
                 <!-- Main content end -->
