--- a/progress.html
+++ b/progress.html
@@ -90,7 +90,11 @@
                   <div class="pixel_tm_title">
                     <div class="title_flex">
                       <div class="left">
-                        <h3>Progress<small>From zero to pro</small></h3>
+                        <h3>
+                          Progress<small
+                            >From zero to pro in online school</small
+                          >
+                        </h3>
                       </div>
                     </div>
                   </div>
